Change implementation of isSupportedQualifier to avoid using getTypeQualifiers (#2990)
* Deprecate QualifierHierarchy#getTypeQualifiers. It returns a list of AnnotationMirrors whose element values may not have been properly initialized. Also, for some hierarchies it is not possible to list all possible type qualifiers. 
* Change the implementation of AnnotatedTypeFactory#isSupportedQualifier to search a set of strings for a class name rather than QualifierHierarchy#getTypeQualifiers
* Add versions of AnnotatedTypeFactory#isSupportedQualifier that take a string or a class.
* Fixes one occurrence of AnnotationBuilder that creates invalid annotations. (#2970.)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Implementation details:
+ * Deprecated QualifierHierarchy#getTypeQualifiers.
+
 ---------------------------------------------------------------------------
 
 Version 3.1.0, January 3, 2020
