--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -751,10 +751,7 @@ the Checker Framework, rather than an official release.
 % checkers and of the checker framework.  It may also help you to debug
 % problems more effectively.
 
-The Checker Framework can be easily built on Unix (Linux and Mac).  You
-might have trouble building on Windows.  If so, you can switch to Unix (at
-least for building, if not for running, the Checker Framework) or you can
-report the problems to the Checker Framework developers.
+Note the JDK requirements (Section~\ref{installation}).
 
 
 \subsectionAndLabel{Install prerequisites}{building-prerequisites}
@@ -762,19 +759,24 @@ report the problems to the Checker Framework developers.
 You need to install several packages in order to build the Checker
 Framework.
 Follow the instructions for your operating system.
+If your OS is not listed, adapt the instructions for an existing OS;
+for example, other Linux distributions will be similar to Ubuntu.
 
 \begin{description}
 \item[Ubuntu]
   Run the following commands:
 
-% Keep this up to date with ../../checker/bin-devel/Dockerfile-ubuntu-jdk8-plus
+% Keep this up to date with ../../checker/bin-devel/Dockerfile-ubuntu-jdk11-plus
 \begin{Verbatim}
 sudo apt-get -qqy update
-sudo apt-get -qqy install ant cpp git gradle junit4 libcurl3-gnutls \
- make maven mercurial unzip wget openjdk-8-jdk \
- dia hevea latexmk librsvg2-bin maven python-pip \
+sudo apt-get -qqy install \
+ openjdk-11-jdk \
+ ant cpp git gradle jq libcurl3-gnutls \
+ make maven mercurial python3-pip python3-requests unzip wget \
+ dia hevea imagemagick latexmk librsvg2-bin maven rsync \
  texlive-font-utils texlive-fonts-recommended \
  texlive-latex-base texlive-latex-extra texlive-latex-recommended
+pip3 install html5validator
 \end{Verbatim}
 
 % Building Checker Framework from source on Mac OS
