Adds @NoQualifierParameter and @HasQualifierParameter on packages (#19)
This adds the ability to turn on @HasQualifierParameter for all classes in a package by writing @HasQualifierParameter as a package annotation so that it doesn't need to be written on each class individually.

Also adds a new annotation, @NoQualifierParameter, which indicates no implicit qualifier parameter. The purpose is so that if @HasQualifierParameter is enabled by default for a package, it can be disabled for specific classes.

--- a/docs/manual/generics.tex
+++ b/docs/manual/generics.tex
@@ -932,6 +932,30 @@ qualifier, that polymorphic qualifier is instantiated to the qualifier on the
 type of the receiver of the field access (or in the case of type variables, the
 qualifier on the upper bound).
 
+\subsectionAndLabel{Implicit qualifier parameters by default}{default-has-qualifier-parameter}
+
+If many classes in a project should have \<@HasQualifierParameter>, it's
+possible to enable it on all classes in a package by default. Writing
+\<@HasQualifierParameter> on a package is equivalent to writing
+\<@HasQualifierParameter> on each class in that package and all subpackages with
+the same arguments.
+
+For example, writing this annotation enables \<@HasQualifierParameter>
+for all classes in \code{mypackage}.
+
+\begin{Verbatim}
+@HasQualifierParameter(Tainted.class)
+package mypackage;
+\end{Verbatim}
+
+When using \<@HasQualifierParameter> on a package, it's possible to disable it
+for a specific class using \refqualclass{framework/qual}{NoQualifierParameter}.
+Writing this on a class indicates it has no implicit qualifier parameter and
+\<@HasQualifierParameter> will not be enabled by default. Like
+\<@HasQualifierParameter>, it takes one or more top annotations. It is illegal
+to explicitly write both \<@HasQualifierParameter> and \<@NoQualifierParameter>
+on the same class for the same hierarchy.
+
 %% TODO: implement this.
 %\subsectionAndLabel{Inheritance of classes with a qualifier parameter}{class-qual-param-inheritance}
 %
