--- a/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
+++ b/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
@@ -99,6 +99,7 @@ methodref.inference.unimplemented=This version of the Checker Framework does not
 
 invalid.polymorphic.qualifier.use=Cannot use polymorphic qualifier on a field unless the class is annotated with @HasQualifierParameter
 missing.has.qual.param=Missing @HasQualifierParameter.\nClass extends or implements a type that has a qualifer parameter.
+conflicting.qual.param=Conflicting @HasQualifierParameter.\nClass has both @HasQualifierParameter and @NoQualifierParameter for %s.
 
 field.invariant.not.found=the field invariant annotation refers to fields not found in a superclass\nfields not found: %s
 field.invariant.not.final=the field invariant annotation refers to fields that are not final\nfields not final: %s
