Add reference to analysis.isRunning().

--- a/dataflow/manual/content.tex
+++ b/dataflow/manual/content.tex
@@ -1805,9 +1805,10 @@ For a given node \code{n}
 
 The \code{AnnotatedTypeFactory} and helper classes need to be prepared to work
 even when dataflow analysis is not finished yet. Code should either check
-whether dataflow analysis is still in progress or handle possible null values.
-The factory should return conservative, flow-insensitive types if the analysis
-is still in progress.
+whether dataflow analysis is still in progress (using
+\code{analysis.isRunning()}) or handle possible null values. The factory should
+return conservative, flow-insensitive types if the analysis is still in
+progress.
 
 
 \subsection{The Checker Framework Store and Dealing with Aliasing}
