--- a/dataflow/manual/content.tex
+++ b/dataflow/manual/content.tex
@@ -216,6 +216,16 @@ package org.checkerframework.framework.flow;
 class CFCFGBuilder extends CFGBuilder
 \end{verbatim}
 
+\subsubsubsection{CFGVisualizeLauncher}
+\label{sec:cfg_visualize_launcher_class}
+
+The CFGVisualizeLauncher generates a DOT or String representation of
+the control flow graph for a given method in a given class.
+
+\begin{verbatim}
+package org.checkerframework.dataflow.cfg;
+class CFGVisualizeLauncher
+\end{verbatim}
 
 \subsubsection{FlowExpressions}
 \label{sec:flow_expressions_class}
