--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -1848,6 +1848,24 @@ The \<dot> program is part of \ahref{http://www.graphviz.org}{Graphviz}.
 
 \end{itemize}
 
+\noindent
+You can also use \refclass{dataflow/cfg}{CFGVisualizeLauncher} to generate a DOT
+or String representation of the control flow graph of a given method in a given class:
+
+\begin{smaller}
+\begin{Verbatim}
+java -classpath "$CHECKERFRAMEWORK/checker/dist/checker.jar:" \
+  "$CHECKERFRAMEWORK/checker/dist/javac.jar" \
+  org.checkerframework.dataflow.cfg.CFGVisualizeLauncher \
+  MyClass.java output/ -class MyClass -method test -pdf
+\end{Verbatim}
+\end{smaller}
+
+\noindent
+The above command will generate the corresponding dot and pdf files for the
+method \code{test} in the class \code{MyClass} in the directory \<output>. For more
+information, run \refclass{dataflow/cfg}{CFGVisualizeLauncher} with no arguments to
+see the usage.
 
 \subsectionAndLabel{Miscellaneous debugging options}{creating-debugging-options-misc}
 
