--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -538,7 +538,7 @@ stub file), then the annotations are merged. If any of the
 methods have different annotations from the same hierarchy on the same type,
 then the annotation from the last declaration is used.
 
-The annotatied JDK is read as a stub file.
+The annotated JDK is read as a stub file.
 
 
 \subsectionAndLabel{Stub file format}{stub-format}
