Instructions to set CHECKERFRAMEWORK environment variable

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -217,7 +217,7 @@ gradlew assembleCheckTypes
 If you use the \href{http://ant.apache.org/}{Ant} build tool to compile
 your software, then you can add an Ant task that runs a checker.  We assume
 that your Ant file already contains a compilation target that uses the
-\code{javac} task.
+\code{javac} task, and that the \<CHECKERFRAMEWORK> environment variable is set.
 
 \begin{enumerate}
 \item
