--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -906,8 +906,8 @@ latest bug fixes and new features:
 \end{Verbatim}
 
 \item
-  To use a local version of the Checker Framework (for example,
-  one that you have built from source):
+  To use a local version of the Checker Framework that
+  you have built from source (Section~\ref{build-source}):
 
 \begin{alltt}
   <dependencies>
