--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -427,12 +427,17 @@ More examples of the use of these annotations appear in the Javadoc for
 \refqualclass{checker/nullness/qual}{EnsuresNonNullIf}.
 
 
-\subsectionAndLabel{Nullness and arrays}{nullness-arrays}
+\subsectionAndLabel{Nullness and array initialization}{nullness-arrays}
 
-Suppose that you declare an array to contain non-null elements.
-Currently, the Nullness Checker does not verify that all the elements of the
-array are initialized to a non-null value.  This is an unsoundness in the
-checker.
+Suppose that you declare an array to contain non-null elements:
+
+\begin{Verbatim}
+  Object [] oa = new Object[10];
+\end{Verbatim}
+
+\noindent
+(recall that \<Object> means the same thing as \<@NonNull Object>).
+By default, the Nullness Checker unsoundly permits this code.
 
 To make the Nullness Checker conservatively reject code that may leave a
 non-null value in an array, use the command-line option
@@ -440,17 +445,8 @@ non-null value in an array, use the command-line option
 because it makes the checker issue many false positive errors.
 % TODO: flip the default after collecting more data.
 
-When the \code{-Alint=forbidnonnullarraycomponents} option is supplied,
-the following is not allowed:
-
-\begin{Verbatim}
-  Object [] oa = new Object[10]; // error
-\end{Verbatim}
-
-\noindent
-(recall that \<Object> means the same thing as \<@NonNull Object>).
-
-Instead, your code needs to create a nullable or lazy-nonnull array, initialize
+With the option enabled, you can write your code to create a nullable or
+lazy-nonnull array, initialize
 each component, and then assign the result to a non-null array:
 
 \begin{Verbatim}
