--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -784,7 +784,7 @@ pip3 install html5validator
 
 \item[Mac OS]
   If you employ \ahref{https://brew.sh}{homebrew} to install packages, run
-  the following commands (you may need to update the version number \<2.31>):
+  the following commands:
 
 \begin{Verbatim}
 brew update
@@ -793,7 +793,7 @@ brew cask install java
 brew cask install mactex
 \end{Verbatim}
 
-Make a \<latex> directory and copy \<hevea.sty> file into it:
+Make a \<latex> directory and copy \<hevea.sty> file into it (you may need to update the version number \<2.31>):
 
 \begin{Verbatim}
 mkdir -p $HOME/Library/texmf/tex/latex
