Note about user interaction while installing prerequisites

--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -780,7 +780,7 @@ sudo apt-get -qqy install \
 pip3 install html5validator
 \end{Verbatim}
 
-% Building Checker Framework from source on Mac OS
+  You may have to answer questions about which time zone your computer is in.
 
 \item[Mac OS]
   If you employ \ahref{https://brew.sh}{homebrew} to install packages, run
