Explain "java.lang.NoSuchFieldError: RELEASE"

--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -65,6 +65,11 @@ This section describes some possible problems and solutions.
 
 \begin{itemize}
 \item
+  \label{no-such-field-error-release}
+  An error that includes \<java.lang.NoSuchFieldError: RELEASE"> means that
+  you are not using the correct compiler (you are not using a Java 9+ compiler).
+
+\item
 If you get the error
 
 %BEGIN LATEX
