--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -1850,16 +1850,33 @@ The \<dot> program is part of \ahref{http://www.graphviz.org}{Graphviz}.
 
 \noindent
 You can also use \refclass{dataflow/cfg}{CFGVisualizeLauncher} to generate a DOT
-or String representation of the control flow graph of a given method in a given class:
+or String representation of the control flow graph of a given method in a given class.
+
+\begin{itemize}
+
+\item With JDK 8:
 
 \begin{smaller}
 \begin{Verbatim}
-java -classpath "$CHECKERFRAMEWORK/checker/dist/checker.jar:" \
-  "$CHECKERFRAMEWORK/checker/dist/javac.jar" \
+java -Xbootclasspath/p:$CHECKERFRAMEWORK/checker/dist/javac.jar \
+  -cp $CHECKERFRAMEWORK/checker/dist/checker.jar \
   org.checkerframework.dataflow.cfg.CFGVisualizeLauncher \
   MyClass.java output/ -class MyClass -method test -pdf
 \end{Verbatim}
 \end{smaller}
+
+
+\item With JDK 11:
+
+\begin{smaller}
+\begin{Verbatim}
+java -cp $CHECKERFRAMEWORK/checker/dist/checker.jar \
+  org.checkerframework.dataflow.cfg.CFGVisualizeLauncher \
+  MyClass.java output/ -class MyClass -method test -pdf
+\end{Verbatim}
+\end{smaller}
+
+\end{itemize}
 
 \noindent
 The above command will generate the corresponding dot and pdf files for the
