--- a/changelog.txt
+++ b/changelog.txt
@@ -72,7 +72,7 @@ Closed issues:
 
 Version 3.0, November 1, 2019
 
-@DefaultFor has new elements variableNames and variableNamesExcept.
+@DefaultFor has new elements variableNames and variableNamesExceptions.
 
 ---------------------------------------------------------------------------
 
