--- a/docs/manual/generics.tex
+++ b/docs/manual/generics.tex
@@ -932,7 +932,7 @@ annotate the field type with the polymorphic qualifier for the type system.
 \begin{Verbatim}
 @HasQualifierParameter(Tainted.class)
 class Buffer {
-  List<@PolyTainted String> strings;
+  @PolyTainted String field;
 }
 \end{Verbatim}
 
