--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version 3.1.3, March 2, 2020
+
+---------------------------------------------------------------------------
+
 Version 3.1.1, February 3, 2020
 
 New command-line options:
