change all references to -Ainfer to -Ainfer=jaifs

--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -715,7 +715,7 @@ Type-checking modes:  enable/disable functionality
   These annotations may reduce the number of type-checking
   errors when running type-checking in the future; see
   Section~\ref{whole-program-inference}.
-  Using \<-Ainfer> produces \<.jaif> files.
+  Using \<-Ainfer=jaifs> produces \<.jaif> files.
   Using \<-Ainfer=stubs> produces \<.astub> files.
 \item \<-AshowSuppressWarningKeys>
   With each warning, show all possible keys to suppress that warning.
