--- a/docs/manual/inference.tex
+++ b/docs/manual/inference.tex
@@ -300,7 +300,7 @@ skip this section.
 
 The \<infer-and-annotate.sh> script repeatedly runs the following steps:
 \begin{enumerate}
-\item Run the checker with the \<-Ainfer> command-line option to infer
+\item Run the checker with the \<-Ainfer=jaifs> command-line option to infer
   types for fields and method signatures.  The output of this step
   is a \<.jaif> file that records the inferred types.
 \item Insert the inferred annotations in the program.  This step uses the
