--- a/docs/manual/inference.tex
+++ b/docs/manual/inference.tex
@@ -108,7 +108,7 @@ Section~\ref{type-refinement-purity}.
 
 \subsubsectionAndLabel{Type inference for any type system}{type-inference-tools-general}
 
-By supplying the \<-Ainfer> command-line option,
+By supplying the \<-Ainfer=\emph{outputformat}> command-line option,
 any type-checker can infer annotations. See Section~\ref{whole-program-inference}.
 
 \href{https://github.com/reprogrammer/cascade/}{Cascade}~\cite{VakilianPEJ2014}
