--- a/changelog.txt
+++ b/changelog.txt
@@ -2,8 +2,8 @@ Version 3.1.3, March 2, 2020
 
 -Ainfer now takes an argument:
  * -Ainfer=jaifs uses .jaif files to store the results of whole-program inference.
-   No argument defaults to this behavior for backwards compatibility.
  * -Ainfer=stubs uses .astub files to store the results of whole-program inference
+ * -Ainfer is same as -Ainfer=jaifs, for backwards compatibility.
 
 New command-line option:
   -AmergeStubsWithSource If both a stub file and a source file are available, use
