--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -710,7 +710,7 @@ Type-checking modes:  enable/disable functionality
   type-checking based no that information; see
   Chapter~\ref{reflection-resolution}.  \<-AresolveReflection=debug> causes
   debugging information to be output.
-\item \<-Ainfer>
+\item \<-Ainfer=\emph{outputformat}>
   Output suggested annotations for method signatures and fields.
   These annotations may reduce the number of type-checking
   errors when running type-checking in the future; see
