--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -702,7 +702,7 @@ helpful if you:
 \item
   Indicate what you have already done to try to understand the problem.
   Did you do any additional experiments?  What parts of the manual did
-  read, and what else did you search for in the manual?  Without This
+  read, and what else did you search for in the manual?  Without this
   information, the maintainers may give you redundant suggestions.
 \end{itemize}
 
