--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -671,7 +671,7 @@ More sound (strict) checking: enable errors that are disabled by default
   ``-source,-bytecode'' is the (unsound) default setting.
   ``bytecode'' specifies
   whether the checker should apply unchecked code defaults to
-  bytecode; see
+  bytecode (that is, to already-compiled libraries); see
   Section~\ref{defaults-classfile}.
   Outside the scope of any relevant
   \refqualclass{framework/qual}{AnnotatedFor} annotation, ``source'' specifies whether unchecked code
