--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -100,12 +100,9 @@ command-line option.)
 
 \item
   \label{nullness-lint-trustarraylenzero}%
-  If you supply the \code{-Alint=trustArrayLenZero} command-line option, then a
-  call to \code{Collection.toArray} will return an array with a non-null
-  component type if the argument is a field access where the field declaration
-  has a \refqualclasswithparams{common/value/qual}{ArrayLen}{0} annotation. See
-  Section~\ref{nullness-collection-toarray} for a discussion.
-
+  If you supply the \code{-Alint=trustArrayLenZero} command-line option, then
+  the checker will trust \refqualclasswithparams{common/value/qual}{ArrayLen}{0}
+  annotations. see Section~\ref{nullness-collection-toarray} for a discussion.
 \end{itemize}
 
 \item
