--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-Version 3.1.3, March 2, 2020
+Version 3.2.0, March 2, 2020
+
+Renamed -AuseDefaultsForUncheckedCode to -AuseConservativeDefaultsForUncheckedCode
+The old name works temporarily but will be removed in a future release.
 
 ---------------------------------------------------------------------------
 
