--- a/docs/manual/advanced-features.tex
+++ b/docs/manual/advanced-features.tex
@@ -229,8 +229,7 @@ rules are used in order, until one applies.
 \end{enumerate}
 
 If the unannotated type is the type of a local variable, then the first 5 rules are skipped and only
-rules 6 and 7 apply. If rule 6 can be applied, rule 7 will be skiped. Rule 6 makes the type of a local
-variables top so they can be refined.
+rules 6 and 7 apply. If rule 6 applies, it makes the type of local variables top so they can be refined.
 
 % (Implementation detail:  setting defaults is implemented by the
 % \refclass{framework/util}{QualifierDefaults} class.)
