--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -443,7 +443,7 @@ When compiling a library that is not fully annotated, use command-line
 argument \<-AuseConservativeDefaultsForUncheckedCode=source,bytecode>.  This causes
 the checker to behave normally for classes with a relevant \<@AnnotatedFor>
 annotation.  For classes without \<@AnnotatedFor>, the checker uses
-unchecked code defaults
+conservative defaults
 (see Section~\ref{defaults-classfile}) for any type use with no explicit
 user-written annotation, and the checker issues no warnings.
 \end{sloppypar}
