--- a/docs/manual/advanced-features.tex
+++ b/docs/manual/advanced-features.tex
@@ -522,7 +522,7 @@ is implicitly the bottom annotation: \code {@NonNull}.
 \subsectionAndLabel{Default qualifiers for \<.class> files (library defaults)}{defaults-classfile}
 
 (\emph{Note:} Currently, the conservative library defaults presented in this section
-are off by default and can be turned on by supplying the \<-AuseDefaultsForUncheckedcode=bytecode>
+are off by default and can be turned on by supplying the \<-AuseConservativeDefaultsForUncheckedCode=bytecode>
 command-line option.  In a future release, they will be turned on
 by default and it will be possible to turn them off by supplying a
 \<-AuseConservativeDefaultsForUncheckedCode=-bytecode> command-line option.)
@@ -611,8 +611,8 @@ misbehave at run time.
 % external libraries.
 
 % TODO: document
-% the \refqualclass{framework/qual}{DefaultInUncheckedCodeFor}
-% and \refqualclass{framework/qual}{DefaultQualifierInHierarchyInUncheckedCode}
+% the \refqualclass{framework/qual}{ConservativeDefaultFor}
+% and \refqualclass{framework/qual}{ConservativeDefaultQualifierInHierarchy}
 % annotations for type system designers.
 
 
@@ -1525,7 +1525,7 @@ class @Marsupial-Animal {
 %%  LocalWords:  AssumeAssertion AsafeDefaultsForUnannotatedBytecode
 %%  LocalWords:  I18nFormatFor AunsafeDefaultsForUnannotatedBytecode
 %%  LocalWords:  AuseConservativeDefaultsForUncheckedCode DefaultFor TypeUseLocation
-% LocalWords:  AuseDefaultsForUncheckedcode EnsuresKeyFor EnsuresKeyForIf
+% LocalWords:  EnsuresKeyFor EnsuresKeyForIf
 % LocalWords:  EnsuresLockHeld EnsuresLockHeldIf FieldInvariant fieldA
 % LocalWords:  fieldB myMethod SomeType runtime typedefs signedness
 %%  LocalWords:  Signedness MonotonicNonNull UpperBoundFor
