Fix table of contents

--- a/docs/manual/faq.tex
+++ b/docs/manual/faq.tex
@@ -80,6 +80,7 @@ fully-qualified type name?
 \faqtocpara{\ref{faq-tool-section}: Tool questions}
 \\ \ref{faq-pluggable-type-checking}: How does pluggable type-checking work?
 \\ \ref{faq-classpath-to-use-annotated-library}: What classpath is needed to use an annotated library?
+\\ \ref{faq-classfile-annotations}: Why do \<.class> files contain more annotations than the source code?
 \\ \ref{faq-checked-exceptions}: Is there a type-checker for managing checked and unchecked exceptions?
 
 \faqtocpara{\ref{faq-other-tools-section}: Relationship to other tools}
