Improve error message of inconsistent.constructor.type (#3114)

--- a/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
+++ b/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
@@ -43,7 +43,7 @@ contracts.precondition.expression.parameter.name=The precondition %s on the decl
 contracts.postcondition.expression.parameter.name=The postcondition %s on the declaration of method '%s' refers to formal parameter '%s' by name. Please use "#%s" instead of "%s".
 contracts.conditional.postcondition.expression.parameter.name=The conditional postcondition %s on the declaration of method '%s' refers to formal parameter '%s' by name. Please use "#%s" instead of "%s".
 
-inconsistent.constructor.type=Constructor type (%s) cannot be statically verified.
+inconsistent.constructor.type=Constructor type (%s) is a subtype of the top type (%s), therefore it cannot be statically verified.
 super.invocation.invalid=Constructor of type %s cannot call %s of type %s.
 this.invocation.invalid=Constructor of type %s cannot call %s of type %s.
 method.invocation.invalid=call to %s not allowed on the given receiver.%nfound   : %s%nrequired: %s
