Make error message better.

--- a/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
+++ b/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
@@ -97,7 +97,7 @@ contracts.conditional.postcondition.false.methodref.invalid=Conditional postcond
 lambda.unimplemented=This version of the Checker Framework does not type-check lambda expressions.
 methodref.inference.unimplemented=This version of the Checker Framework does not type-check method references with implicit type arguments.
 
-invalid.polymorphic.qualifier.use=Cannot use polymorphic qualifier on a field unless the class is annotated with @HasQualifierParameter
+invalid.polymorphic.qualifier.use=Cannot use polymorphic qualifier %s on a field unless the class is annotated with @HasQualifierParameter
 missing.has.qual.param=Missing @HasQualifierParameter.%nClass extends or implements a type that has a qualifier parameter.
 conflicting.qual.param=Conflicting @HasQualifierParameter.%nClass has both @HasQualifierParameter and @NoQualifierParameter for %s.
 
